--- a/src/main/resources/frontend/package.json
+++ b/src/main/resources/frontend/package.json
@@ -11,10 +11,12 @@
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
+    "vue-router": "^3.3.2",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-router": "^4.4.1",
     "@vue/cli-plugin-typescript": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "axios": "^0.18.0",
