将打包过程的http请求轮询换成WebSocket长连接

--- a/src/main/resources/frontend/tsconfig.json
+++ b/src/main/resources/frontend/tsconfig.json
@@ -14,7 +14,8 @@
     "types": [
       "webpack-env",
       "vuetify",
-      "vue-router"
+      "vue-router",
+      "ws"
     ],
     "paths": {
       "@/*": [
