--- a/src/main/resources/frontend/.env.production
+++ b/src/main/resources/frontend/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV = 'production'
 VUE_APP_MODE = 'production'
-VUE_APP_API_URL = ’http://45.32.228.179:4000‘
+VUE_APP_API_URL = ’ws://45.32.228.179:4000‘
