--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -30,3 +29,5 @@ out/
 
 ### VS Code ###
 .vscode/
+/src/main/resources/frontend/dist.zip
+/src/main/resources/frontend/github-proxy-frontend.zip
