--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ out/
 .vscode/
 /src/main/resources/frontend/dist.zip
 /src/main/resources/frontend/github-proxy-frontend.zip
+/src/main/resources/frontend/github-proxy-*.jar
