--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=4000
+server.ssl.key-store=classpath:gdh.jks
+server.ssl.key-store-password=LemonNeko233
+server.ssl.key-password=LemonNeko233
+server.ssl.key-alias=gdh
